# reddit-graph

./: .gitignore  Makefile  README.org  docker_run.sh  refinery.toml
docker/: Dockerfile
pop_content/: Cargo.toml
pop_content/migrations/: V1__create_table_post_refs.sql  V2__create_table_subreddits.sql  V3__create_table_users.sql
pop_content/queries/: post_refs.sql
pop_content/src/: args.rs  cornucopia.rs  db_task.rs  error.rs  file_task.rs  main.rs
pop_wiki/: pop_subreddits.py  pop_wiki.py  requirements.txt
pop_wiki/migrations/: V1__create_table_subreddits.sql  V2__create_table_wikis.sql  V3__create_table_wiki_refs.sql
postprocess_wiki/: postprocess_wiki.sql
