[package]
name = "populate_content"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.86"
clap = "4.5.4"
cornucopia = "0.9.0"
cornucopia_async = "0.6.0"
deadpool-postgres = "0.12.1"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = "0.7.10"
zstd = "0.13.1"

[profile.release]
codegen-units = 1
lto = "fat"
